--- a/teamcostco/src/main/resources/templates/intro/intro.html
+++ b/teamcostco/src/main/resources/templates/intro/intro.html
@@ -29,7 +29,7 @@
     <!--인기 상품-->
 
     <div class="view-all">
-        <a href="#" class="view-all-button">카탈로그 보기</a>
+        <!-- <a href="#" class="view-all-button">카탈로그 보기</a> -->
     </div>
 
 
