--- a/teamcostco/src/main/resources/templates/customer/shipping_address.html
+++ b/teamcostco/src/main/resources/templates/customer/shipping_address.html
@@ -37,10 +37,6 @@
                 <h3>새 배송지 추가</h3>
                 <form id="addressForm">
                     <div class="form_group">
-                        <label for="alias">주소 별칭</label>
-                        <input type="text" id="alias" name="alias" required>
-                    </div>
-                    <div class="form_group">
                         <label for="recipient">받으실 분</label>
                         <input type="text" id="recipient" name="recipient" required>
                     </div>
@@ -48,11 +44,11 @@
                         <label for="address">배송 주소</label>
                         <!-- <input type="text" id="address" name="address" required> -->
 
-                        <input type="text" id="sample6_postcode" placeholder="우편번호">
+                        <input type="text" id="sample6_postcode" placeholder="우편번호" readonly>
                         <input type="button" onclick="sample6_execDaumPostcode()" value="우편번호 찾기"><br>
-                        <input type="text" id="sample6_address" placeholder="주소"><br>
+                        <input type="text" id="sample6_address" placeholder="주소" readonly><br>
                         <input type="text" id="sample6_detailAddress" placeholder="상세주소">
-                        <input type="text" id="sample6_extraAddress" placeholder="참고항목">
+                        <input type="hidden" id="sample6_extraAddress" placeholder="참고항목">
 
                     </div>
                     <div class="form_group">
@@ -83,7 +79,6 @@
                         <th scope="col">기본주소</th>
                         <th scope="col">받으실분</th>
                         <th scope="col">배송주소</th>
-                        <th scope="cole">별칭</th>
                         <th scope="col">연락처</th>
                         <th scope="col">관리</th>
                     </tr>
@@ -111,7 +106,6 @@
                                 <span th:text="${address != null ? address.detail_address : ''}"></span>
                             </div>
                         </td>
-                        <td th:text="${address != null ? address.alias : ''}"></td>
                         <td th:text="${address != null ? address.phone_number : ''}"></td>
                         <td>
                             <a th:if="${address != null}"
